<resources>
    <string name="app_name">Sliceat</string>
    <string name="launchLogo">launchLogo</string>
    <string name="skip_button">Salta</string>
    <string name="entry"><u>entry</u></string>
    <string name="onboardingimage">onBoardingImage</string>
    <string name="onboardingText1">La mappa è la tua home.\nApri Sliceeat e scegli subito\ndove mangiare, modifica i filtri\ndi ricerca e presto potrai\n
        fare molto altro.\nSemplicità è la parola d’ordine!</string>
    <string name="onboardingText2">Premessa: Sliceat è pensata\nper tutti. Ma il nostro piatto\nforte è dedicato a chi ha\nproblemi di allergia o\n
        intolleranza alimentare.</string>
    <string name="onboardingText3">Il team di Sliceat rivoluzionerà\ni motivi che ti spingono a\nscannerizzare il codice QR.\nSaranno i nostri adesivi la
        prima\ncosa che cercherai appena\nentrato in un locale.</string>
    <string name="onboardingTitle1">Tutto sotto\ncontrollo.</string>
    <string name="onboardingTitle2">Loro hanno\nla precedenza.</string>
    <string name="onboardingTitle3">La rivoluzione è\nnascosta qui.</string>
    <string name="accedi">Accedi</string>
    <string name="registrati">Registrati</string>
    <string name="authenticationText">Accedi o registrati per iniziare ad \nutilizzare tutte le funzionalità di SlicEat.\nGratis. Senza pubblicità.</string>
    <string name="authenticationTitle1">Sentiti libero \ncon SlicEat+.</string>
    <string name="authenticationImage">authenticationImage</string>
    <string name="vaiAllaMappa">VaiAllaMappa</string>
    <string name="prosegui">Prosegui</string>
    <string name="accediConFb">Accedi Con Facebook</string>
    <string name="accediConGoogle">Accedi Con Google</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="scrivi_qui">Scrivi Qui</string>
    <string name="title_activity_maps_screen">Map</string>
    <string name="action_settings">Settings</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="last_name">Cognome</string>
    <string name="first_name">Nome</string>
    <string name="ops_forgotten_password">Ops! Password dimenticata.</string>
    <string name="sliceat_is_in_bologna">#sliceatèabologna</string>
    <string name="continua">Continua</string>
    <string name="sliceat_is_in_rome">#sliceatèaroma</string>
    <string name="sliceat_is_in_verona">#sliceatèaverona</string>
    <string name="mood_music">Il tuo mood sceglie che musica \nascoltare, cosa leggere e \ncosa indossare. Perchè non \nfarlo con quello che mangi?</string>
    <string name="your_email">La tua e-mail?</string>
    <string name="never_sell">Non venderemo la tua e-mail per\npubblicità.</string>
    <string name="page_two">2/5</string>
    <string name="page_three">3/5</string>
    <string name="your_password">La tua password?</string>
    <string name="choise_password">Scegli almeno una lettere maiuscola e\nun carattere speciale, ad esempio (-!%$).</string>
    <string name="repeatPassword">Ripeti password</string>
    <string name="sliceat_is_in_firenze">#sliceatèafirenze</string>
    <string name="intolleranze">Sono 18 le intolleranze\no allergie che puoi\nscegliere all’interno dei filtri.</string>
    <string name="page_four">4/5</string>
    <string name="your_years">Quanti anni hai?</string>
    <string name="insertData">31/08/1985</string>
    <string name="sliceat_is_in_milano">#sliceatèamilano</string>
    <string name="invita_un_locale">Invita un locale che offre\nprodotti senza glutine.\nAiutare gli altri non è mai\nstato così semplice.</string>
    <string name="page_five">5/5</string>
    <string name="smile">Fai un bel sorriso!</string>
    <string name="name_empty">Il campo nome è obbligatorio!</string>
    <string name="last_name_empty">Il campo cognome è obbligatorio!</string>
    <string name="empty_email">Il campo E-mail è obbligatorio!</string>
    <string name="wrong_email">E-mail errata!</string>
    <string name="empty_data">Il campo Data è obbligatorio!</string>
    <string name="spacial_character">La password non soddisfa tutti i requisiti!</string>
    <string name="same_password">Le password non coincidono!</string>
    <string name="take_or_select">Scatta o\n Scegli</string>
    <string name="choise_photo_gallery">Scegli se scattare una foto o\nrecuperarla dalla galleria</string>
    <string name="take_photo">Scatta una foto</string>
    <string name="choise_photo">Scegli foto</string>
    <string name="start">Inizia</string>
    <string name="back_button">back button</string>
    <string name="setting">Impostazioni</string>
    <string name="informazioni_sicure">Informazioni sicure</string>
    <string name="description_informations">Il primo modo per combattere il virus\nè tenersi aggiornati su canali\nd’informazione autorevoli e sicuri.</string>
    <string name="secure_eating">Mangia in sicurezza</string>
    <string name="your_profile">Il tuo profilo</string>
    <string name="mail">Posta</string>
    <string name="invite">Inviti</string>
    <string name="share_sliceat">Condividi Sliceat</string>
    <string name="your_thinking">Cosa ne pensi di Sliceat?</string>
    <string name="legal">Legale</string>
    <string name="term_usage">Termini di Utilizzo</string>
    <string name="privacy_policy">Politica della Privacy</string>
    <string name="version_sliceat">Versione di Sliceat 1.0</string>
    <string name="empty"> </string>
    <string name="letters_manager">Gentili colleghi,\n\n  Abbiamo passato davvero un periodo intenso sotto ogni aspetto. Una malattia completamente nuova,
        la condivisione  di fake news, il lockdown dalla durata storica e infine una ripresa lenta e piena d’incertezza economica e morale.\n\nAppena il
        governo ha iniziato la Fase 2, molti di voi, nonostante la possibilità di aprire il proprio locale, non lo hanno fatto. Avete preferito aspettare
        che la situazione ritornasse “normale” e, quindi, offrire ai vostri clienti un esperienza diversa.\n\nAltri invece sono riusciti ad organizzarsi e
        aprire il proprio locale quasi da subito. Certo, con qualche sacrificio, ma non hanno mai abbondato i loro fedeli clienti.\n\n<b>Una ripresa piena di
        novità</b>\n\nCosì abbiamo assistito ad una valanga di applicazioni e siti web che offrivano l’opportunità di aggiungere al proprio servizio anche
        un’esperienza digitale.\n\nAnche Sliceat si è adeguata e offre la possibilità di digitalizzare il proprio servizio.\n\nPerò ci teniamo davvero a
        dirti una cosa: abbiamo bisogno più che mai di creare una relazione umana con i nostri clienti. Superando le barriere digitali ed evitare di
        nasconderci dietro ad uno schermo.\n\nIl cliente desidera conoscere davvero chi c’è dietro ad un servizio o ad un prodotto.\n\n<b>Sliceat vuole creare
        una nuova realtà</b>\n\nIl nostro sogno è quello di permettere a tantissime persone di sentirsi libere di mangiare dove e come vogliono. Noi, anche
        se siamo solo all’inizio, ci impegneremo per offrirti un servizio all’altezza delle tue aspettative.\n\nPerò, creando una piattaforma diversa dalle
        altre: il tuo locale è al centro dell’attenzione del cliente. La tua storia parlerà al posto tuo. Il tuo menù e il servizio che offri farà da garante.
        \n\nUtilizziamo il digitale per far conoscere la tua storia e attirare clienti che hanno ancora il desiderio di conoscerti.\n\nCon una piccola
        sorpresa: sarà gratis fino a quando non avremo superato questo periodo. Lo facciamo per i nostri tantissimi clienti, per te e per il tuo business.\n\n
        Ci aspettano tantissime novità. Questo è solo l’inizio. A presto e buon lavoro.\n\nSliceat</string>
    <string name="setting_title1">Una lettera per\ntutti i manager.</string>
    <string name="setting_title2">Sliceat è intollerante\nall’inquinamento.</string>
    <string name="icon_close">close</string>
    <string name="info_covid19_1">Non sappiamo quanto durerà ancora questa epidemia internazionale.\n\nSliceat ha incluso queste linee guida per salvaguardare
        la salute di tutti gli utenti che desiderano divertirsi e la salute di tutti coloro che stanno lavorando e che offrono un servizio.\n\nTuttavia,
        tutte queste misure adottate non eliminano il rischio. Le regole, per amore del prossimo, devono essere rispettate sempre e da tutti. In un
        momento storico come questo è essenziale l’aiuto di tutta la community.\n\nNella pagina delle impostazioni potrai trovare utile cliccare sul
        tasto “Informazioni sicure” per tenerti aggiornato su mezzi d’informazione autorevoli.\n\nOgni locale può adottare misure diverse per difendere
        la salute di tutti. Qui sono elencate le misure idonee in ogni contesto in cui Sliceat si trova ad affrontare.  Se credi che un locale non
        soddisfa i requisiti per rimanere aperto segnalano alla community in fase di votazione e chiama le autorità competenti.</string>
    <string name="title_covid19_1">Quali sono le linee\nguida?</string>
    <string name="title_covid19_2">2. Distanziamento\nsociale.</string>
    <string name="info_covid19_2">Quanto ti trovi in un’area comune o in uno spazio condiviso, mantieni sempre la distanza di sicurezza da tutte le
        persone che non fanno parte del tuo tavolo. Ogni volta che hai un contatto con lo staff o con altre persone all’interno del locale - quando
        aspetti all’entrata del locale, quando sei alla cassa o quando aspetti la tua prenotazione a domicilio - tieni la distanza minima di 1,5 metri.
        Segui, comunque, le regole previste dal tuo paese.</string>
    <string name="title_covid19_3">3. Indossa la\nmascherina.</string>
    <string name="info_covid19_3">La mascherina è un mezzo fondamentale per proteggere te e gli altri. Togli la mascherina solo dopo che ti sei seduto al tavolo. Se hai necessità di alzarti prima, durante e dopo il pasto indossa sempre la mascherina. Segui, comunque, le regole previste dal tuo paese.</string>
    <string name="title_covid19_4">4. Lavati le mani\nregolarmente.</string>
    <string name="info_covid19_4">Appena entri in un locale lava le mani con il gel detergente con almeno il 60% di alcol, applicandolo sulle mani e sfregandole fino a completo assorbimento. Se non è previsto dal locale, porta con te il gel detergente. Se il gel detergente non è previsto in alcun modo, lava le mani con acqua e sapone sfregando bene le mani per almeno 20 secondi. Segui, comunque, le regole previste dal tuo paese.</string>
    <string name="title_covid19_5">5. Misurazione\ntemperatura.</string>
    <string name="info_covid19_5">Alcuni locali hanno previsto la misurazione della temperatura corporea. Non sottovalutare questa disposizione importantissima. Se la temperatura supera i 37.5° gradi, e il locale ti chiede di allontanarti, segui le disposizioni locali. Tieni monitorata la tua salute e contatta il tuo medico se dovresti accusare i sintomi del Covid-19. Segui, comunque, le regole previste dal tuo paese.</string>
    <string name="title_covid19_6">Cosa fare se risulti\npositivo dopo il pasto\nconsumato nel locale?</string>
    <string name="info_covid19_6">Non farti prendere dal panico. Informa immediatamente il tuo medico e le autorità locali. Inoltre, informa anche il locale in cui hai consumato il pasto che, immediatamente, provvederà ad applicare le misure idonee per altri clienti.</string>
    <string name="info_covid19_7"><b>Hai trovato utile questo articolo?</b></string>
    <string name="yes">si</string>
    <string name="no">no</string>
    <string name="title_covid19">Regole\nanti Covid-19</string>
    <string name="subtitle_covid19">Prima di entrare rispetta le\nregole per combattere il virus.</string>
</resources>