<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LetterManagersScreen">

    <ImageView
        android:id="@+id/image_covid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/image_covid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/image_covid_title"
        style="@style/authenticationTitle1"
        android:layout_height="wrap_content"
        android:text="@string/title_covid19"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/image_covid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_covid"
        app:layout_constraintVertical_bias="0.388" />

    <TextView
        android:id="@+id/image_covid_subtitle"
        style="@style/textTitle"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/subtitle_covid19"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_covid_title" />

    <ScrollView
        style="@style/ScrollView"
        android:layout_marginTop="24dp"
        android:fadeScrollbars="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_covid"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_covid19_1"
                style="@style/authenticationTitle1"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="24dp"
                android:gravity="start"
                android:text="@string/title_covid19_1"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/info_covid19_1"
                style="@style/text"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="24dp"
                android:gravity="start"
                android:text="@string/info_covid19_1"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/title_covid19_2"
                style="@style/authenticationTitle1"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="24dp"
                android:gravity="start"
                android:text="@string/title_covid19_2"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/info_covid19_2"
                style="@style/text"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="24dp"
                android:gravity="start"
                android:text="@string/info_covid19_2"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/title_covid19_3"
                style="@style/authenticationTitle1"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="24dp"
                android:gravity="start"
                android:text="@string/title_covid19_3"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/info_covid19_3"
                style="@style/text"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="24dp"
                android:gravity="start"
                android:text="@string/info_covid19_3"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/title_covid19_4"
                style="@style/authenticationTitle1"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="24dp"
                android:gravity="start"
                android:text="@string/title_covid19_4"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/info_covid19_4"
                style="@style/text"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="24dp"
                android:gravity="start"
                android:text="@string/info_covid19_4"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/title_covid19_5"
                style="@style/authenticationTitle1"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="24dp"
                android:gravity="start"
                android:text="@string/title_covid19_5"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/info_covid19_5"
                style="@style/text"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="24dp"
                android:gravity="start"
                android:text="@string/info_covid19_5"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/title_covid19_6"
                style="@style/authenticationTitle1"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="24dp"
                android:gravity="start"
                android:text="@string/title_covid19_6"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/info_covid19_6"
                style="@style/text"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="24dp"
                android:gravity="start"
                android:text="@string/info_covid19_6"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/info_covid19_7"
                style="@style/textTitle"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="24dp"
                android:gravity="start"
                android:text="@string/info_covid19_7"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/yes_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginBottom="24dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/ic_button_mini"
                    android:text="@string/yes"
                    android:textAllCaps="true"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/no_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/ic_button_mini"
                    android:text="@string/no"
                    android:textAllCaps="true"
                    android:textColor="@color/black" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

