<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.signIn.signin2.SignInScreen2">

    <Button
        android:id="@+id/backButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="16dp"
        android:background="@drawable/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/page_three"
        style="@style/title"
        android:layout_margin="16dp"
        android:text="@string/page_three"
        app:layout_constraintBottom_toBottomOf="@id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/backButton" />

    <TextView
        android:id="@+id/your_password"
        style="@style/title"
        android:layout_margin="16dp"
        android:text="@string/your_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backButton" />

    <TextView
        android:id="@+id/choise_password"
        style="@style/text"
        android:layout_margin="16dp"
        android:text="@string/choise_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/your_password" />

    <EditText
        android:id="@+id/insertPassword"
        style="@style/title"
        android:layout_margin="16dp"
        android:background="@null"
        android:hint="@string/password"
        android:textColor="@color/graySoft"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choise_password" />

    <EditText
        android:id="@+id/repeatPassword"
        style="@style/title"
        android:layout_margin="16dp"
        android:background="@null"
        android:hint="@string/repeatPassword"
        android:textColor="@color/graySoft"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/insertPassword" />

    <Button
        android:id="@+id/continua"
        style="@style/authenticationButton"
        android:backgroundTint="@color/graySoft"
        android:text="@string/continua"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repeatPassword" />

    <TextView
        android:id="@+id/sliceat_is_in_firenze"
        style="@style/textTitle"
        android:layout_margin="16dp"
        android:elevation="1dp"
        android:text="@string/sliceat_is_in_firenze"
        app:layout_constraintEnd_toEndOf="@id/firenze"
        app:layout_constraintStart_toStartOf="@id/firenze"
        app:layout_constraintTop_toTopOf="@id/firenze" />

    <TextView
        android:id="@+id/intolleranze"
        style="@style/textTitle"
        android:elevation="1dp"
        android:text="@string/intolleranze"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/sliceat_is_in_firenze"
        app:layout_constraintStart_toStartOf="@id/sliceat_is_in_firenze"
        app:layout_constraintTop_toBottomOf="@id/sliceat_is_in_firenze" />

    <ImageView
        android:id="@+id/firenze"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/firenze_sliceat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

